added same color in home

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .nav{
-    background-color: lightgreen;
+    background-color: #22c55e;
 }
 
 .footer{
-    background-color: lightgreen;
+    background-color: #22c55e;
 }
