--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,8 +5,4 @@ h2{
     text-align: left;
     color: black;
     font-size: 150%;
-/* }
-label{
-    font-style: italic;
-    font-size: 50%;
-} */
+}
