--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,179 @@
-.nav{
-    background-color: #22c55e;
+body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    font-weight: 400;
+    color: #666666;
 }
 
-.footer{
-    background-color: #22c55e;
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 100%;
+}
+
+
+.nav {
+    background-color: #07dc3c;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav a {
+    color: #333333;
+    text-decoration: none;
+    margin-right: 20px;
+    font-weight: 700;
+}
+
+.nav a:hover {
+    color: #f4f4f4;
+}
+
+.title {
+    font-size: 18px;
+    line-height: 1.2;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+}
+
+.title h1{
+    margin-left: -15px;
+}
+
+.title img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 0;
+    margin-left: 2px;
+}
+
+.section {
+    padding: 80px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.section-text {
+    max-width: 50%;
+    margin-bottom: 40px;
+}
+
+.section-text h1 {
+    font-size: 36px;
+    line-height: 1.2;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.section-text p {
+    line-height: 1.8;
+    margin-bottom: 20px;
+}
+
+.section-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 50%;
+}
+
+.section-btn button {
+    background-color: #07dc3c;
+    color: #ffffff;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    transition: background-color 0.3s ease;
+}
+
+.section-btn button:hover {
+    background-color: #3e9e75;
+}
+
+.section-btn-link {
+    background-color: #07dc3c;
+    color: #ffffff;
+    border: none;
+    padding: 10px 30px;
+    border-radius: 5px;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 18px;
+    transition: background-color 0.3s ease;
+}
+
+.section-img {
+    max-width: 50%;
+    margin-bottom: 40px;
+}
+
+.section-img img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.footer {
+    background-color: #07dc3c;
+    padding: 20px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.footer a {
+    color: #333333;
+    text-decoration: none;
+    margin-right: 20px;
+    font-size: 20px;
+    transition: color 0.3s ease;
+}
+
+.footer a:hover {
+    color: #f4f4f4;
+}
+
+.footer svg {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    transition: fill 0.3s ease;
+}
+
+.footer svg:hover {
+    fill: #e9efec;
+}
+
+@media (max-width: 768px) {
+    .section {
+        flex-direction: column;
+    }
+
+    .section-text,
+    .section-img {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .section-btn {
+        max-width: 100%;
+    }
 }
