--- a/css/about.css
+++ b/css/about.css
@@ -345,7 +345,7 @@ footer {
     }
 
     .sucursales {
-        width: 119%;
+        width: 100%;
         display: flex;
     }
 
@@ -394,7 +394,7 @@ footer {
 
     .sectionAbout {
         flex-direction: column;
-        width: 130%;
+        width: 124%;
     }
 
     .containerAbout{
@@ -419,14 +419,19 @@ footer {
         max-width: 100%;
     }
 
+    .sucursales iframe {
+        width: 100%;
+        height: 250px;
+      }
+
     .sucursales {
-        width: 130%;
+        width: 126%;
         display: flex;
     }
 
     .footer {
         flex-direction: column;
-        width: 125%;
+        width: 120%;
       }
     
       .footer a {
@@ -465,7 +470,7 @@ footer {
 
     .sectionAbout {
         flex-direction: column;
-        width: 130%;
+        width: 100%;
         background-position: bottom;
     }
 
@@ -486,7 +491,8 @@ footer {
     }
 
     .containerAbout{
-        margin-left: 2rem;;
+        margin-left: 0;
+        width: 90%;
     }
 
     .card-container{
@@ -507,14 +513,19 @@ footer {
         max-width: 100%;
     }
 
+    .sucursales iframe {
+        width: 100%;
+        height: 250px;
+      }
+
     .sucursales {
-        width: 130%;
+        width: 98%;
         display: flex;
     }
 
     .footer {
         flex-direction: column;
-        width: 120%;
+        width: 95%;
       }
     
       .footer a {
@@ -553,6 +564,7 @@ footer {
     .sectionAbout {
         flex-direction: column;
         background-position: bottom;
+        width: 104%;
     }
 
     .card-container {
@@ -585,6 +597,16 @@ footer {
         max-width: 100%;
     }
 
+    .sucursales iframe {
+        width: 100%;
+        height: 250px;
+      }
+
+      .sucursales {
+        width: 105%;
+        display: flex;
+    }
+
     .card-container{
         justify-content: center;
         display: flex;
@@ -595,13 +617,14 @@ footer {
 
     .footer {
         flex-direction: column;
-        width: 125%;
+        width: 100%;
       }
     
       .footer a {
         margin: 10px 0;
       }
-}
+    }
+
 
 @media (max-width: 672px) {
 
@@ -717,7 +740,7 @@ footer {
 
     .sectionAbout {
         flex-direction: column;
-        width: 151%;
+        width: 101%;
         padding-top: 110px;
         background-position: bottom;
     }
@@ -732,13 +755,105 @@ footer {
     .aboutDescription {
         text-align: start;
         margin-top: 20px;
-        width: 100%;
+        width: 90%;
     }
 
     .card-container{
         justify-content: center;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        align-content: flex-end;
+        flex-wrap: wrap;
+    }
+
+    .containerAbout{
+        padding-top: 0;
+        font-size: smaller;
+        width: fit-content;
+    }
+
+    .features {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: space-evenly;
+        flex-direction: column;
+    }
+
+
+    .section-text,
+    .section-img {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .sucursales{
+        width: 100%;
+        margin-left: -1rem;
+    }
+
+
+    .footer {
+        flex-direction: column;
+        width: 94%;
+      }
+    
+      .footer a {
+        margin: 10px 0;
+      }
+}
+
+@media (max-width: 400px) {
+
+    .menu-icon {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 10px;
+        cursor: pointer;
+        font-size: 24px;
+    }
+
+    nav {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: #07dc3c;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    nav a {
+        margin-bottom: 10px;
+    }
+
+    .sectionAbout {
+        flex-direction: column;
+        width: 120%;
+        padding-top: 110px;
+        background-position: bottom;
+    }
+
+   .sectionAbout h1 {
+        font-size: 1.5rem;
+        margin-bottom: 20px;
+        color: #2c3e50;
+        margin-right: 20%;
+    }
+
+    .aboutDescription {
+        text-align: start;
+        margin-top: 20px;
+        width: 90%;
+    }
+
+    .card-container{
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
         align-content: flex-end;
         flex-wrap: wrap;
     }
@@ -763,14 +878,14 @@ footer {
     }
 
     .sucursales{
-        width: 100%;
-        margin-left: 7rem;
+        width: 95%;
+        margin-left: 3rem;
     }
 
 
     .footer {
         flex-direction: column;
-        width: 141%;
+        width: 113%;
       }
     
       .footer a {
@@ -829,7 +944,7 @@ footer {
     .card-container{
         justify-content: center;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         align-content: flex-end;
         flex-wrap: wrap;
     }
@@ -853,8 +968,8 @@ footer {
     }
 
     .sucursales{
-        width: 100%;
-        margin-left: 7rem;
+        width: 148%;
+        margin-left: 2rem;
     }
 
 
