--- a/css/about.css
+++ b/css/about.css
@@ -17,7 +17,7 @@ body {
 
 
 .nav {
-    background-color: #07dc3c;
+    background-color: #7200eb;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 0;
     position: fixed;
@@ -32,7 +32,7 @@ body {
 }
 
 .nav a {
-    color: #333333;
+    color: white;
     text-decoration: none;
     margin-right: 20px;
     font-weight: 700;
@@ -51,7 +51,7 @@ body {
 }
 
 .nav a:hover {
-    color: #f4f4f4;
+    color: #07dc3c;
 }
 
 .title {
@@ -64,6 +64,7 @@ body {
 
 .title h1{
     margin-left: -15px;
+    color: white;
 }
 
 .titleWord{
@@ -177,8 +178,8 @@ body {
 
 
 footer {
-    background-color: #07dc3c;
-    color: #211e1e;
+    background-color: #7200eb;
+    color: white;
     padding: 20px;
     font-weight: bold;
   }
@@ -228,7 +229,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -304,7 +305,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -347,6 +348,7 @@ footer {
     .sucursales {
         width: 100%;
         display: flex;
+        padding-left: 6rem;
     }
 
     .footer {
@@ -382,7 +384,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -439,6 +441,82 @@ footer {
       }
 }
 
+@media (max-width: 973px) {
+
+    .menu-icon {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 10px;
+        cursor: pointer;
+        font-size: 24px;
+    }
+
+    nav {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: #7200eb;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    nav a {
+        margin-bottom: 10px;
+    }
+
+    .sectionAbout {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .containerAbout{
+        margin-left: 1rem;
+        width: 89%;
+    }
+
+    .card-container{
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-content: flex-end;
+        flex-wrap: wrap;
+    }
+
+    .section-text,
+    .section-img {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .section-btn {
+        max-width: 100%;
+    }
+
+    .sucursales iframe {
+        width: 100%;
+        height: 250px;
+      }
+
+    .sucursales {
+        width: 100%;
+        display: flex;
+    }
+
+    .footer {
+        flex-direction: column;
+        width: 95%;
+      }
+    
+      .footer a {
+        margin: 10px 0;
+      }
+}
+
 
 @media (max-width: 820px) {
 
@@ -458,7 +536,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -551,7 +629,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -644,7 +722,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -728,7 +806,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -820,7 +898,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -832,7 +910,7 @@ footer {
 
     .sectionAbout {
         flex-direction: column;
-        width: 120%;
+        width: 100%;
         padding-top: 110px;
         background-position: bottom;
     }
@@ -878,14 +956,14 @@ footer {
     }
 
     .sucursales{
-        width: 95%;
-        margin-left: 3rem;
+        width: 87%;
+        margin-left: 1rem;
     }
 
 
     .footer {
         flex-direction: column;
-        width: 113%;
+        width: 90%;
       }
     
       .footer a {
@@ -911,7 +989,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
