--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 
 
 .nav {
-    background-color: #07dc3c;
+    background-color: #7200eb;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 0;
     position: fixed;
@@ -32,7 +32,7 @@ body {
 }
 
 .nav a {
-    color: #333333;
+    color: white;
     text-decoration: none;
     margin-right: 20px;
     font-weight: 700;
@@ -51,7 +51,7 @@ body {
 }
 
 .nav a:hover {
-    color: #f4f4f4;
+    color: #07dc3c;
 }
 
 .title {
@@ -60,6 +60,7 @@ body {
     font-weight: 700;
     display: flex;
     align-items: center;
+    color: white;
 }
 
 .title h1{
@@ -268,8 +269,8 @@ body {
 }
 
 footer {
-    background-color: #07dc3c;
-    color: #211e1e;
+    background-color: #7200eb;
+    color: white;
     padding: 20px;
     font-weight: bold;
   }
@@ -319,7 +320,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -370,7 +371,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -421,7 +422,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
