--- a/css/styleContact.css
+++ b/css/styleContact.css
@@ -16,7 +16,7 @@ body {
 }
 
 .nav {
-  background-color: #07dc3c;
+  background-color: #7200eb;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 0;
   position: fixed;
@@ -31,7 +31,7 @@ body {
 }
 
 .nav a {
-  color: #333333;
+  color: white;
   text-decoration: none;
   margin-right: 20px;
   font-weight: 700;
@@ -49,8 +49,8 @@ body {
   display: block;
 }
 
-nav a:hover {
-  color: #f4f4f4;
+.nav a:hover {
+  color: #07dc3c;
 }
 
 .title {
@@ -59,6 +59,7 @@ nav a:hover {
   font-weight: 700;
   display: flex;
   align-items: center;
+  color: white;
 }
 
 .title h1 {
@@ -157,8 +158,8 @@ nav a:hover {
 }
 
 footer {
-  background-color: #07dc3c;
-  color: #211e1e;
+  background-color: #7200eb;
+  color: white;
   padding: 20px;
   font-weight: bold;
 }
@@ -206,7 +207,7 @@ footer a:hover {
     top: 100%;
     left: 0;
     width: 100%;
-    background: #07dc3c;
+    background: #7200eb;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     flex-direction: column;
@@ -333,7 +334,7 @@ footer a:hover {
     top: 100%;
     left: 0;
     width: 100%;
-    background: #07dc3c;
+    background: #7200eb;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     flex-direction: column;
@@ -460,7 +461,7 @@ footer a:hover {
     top: 100%;
     left: 0;
     width: 100%;
-    background: #07dc3c;
+    background: #7200eb;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
     flex-direction: column;
@@ -587,7 +588,7 @@ footer a:hover {
       top: 100%;
       left: 0;
       width: 100%;
-      background: #07dc3c;
+      background: #7200eb;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       padding: 20px;
       flex-direction: column;
@@ -716,7 +717,7 @@ footer a:hover {
       top: 100%;
       left: 0;
       width: 100%;
-      background: #07dc3c;
+      background: #7200eb;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       padding: 20px;
       flex-direction: column;
