update css change color nav

--- a/css/about.css
+++ b/css/about.css
@@ -315,7 +315,7 @@ footer {
             top: 100%;
             left: 0;
             width: 100%;
-            background: #07dc3c;
+            background: #7200eb;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 20px;
             flex-direction: column;
@@ -768,7 +768,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -852,7 +852,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
