--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,7 @@ footer {
         padding: 10px;
         cursor: pointer;
         font-size: 24px;
+        color: white;
     }
 
     nav {
@@ -363,6 +364,7 @@ footer {
         padding: 10px;
         cursor: pointer;
         font-size: 24px;
+        color: white;
     }
 
     nav {
@@ -414,6 +416,7 @@ footer {
         padding: 10px;
         cursor: pointer;
         font-size: 24px;
+        color: white;
     }
 
     nav {
