--- a/css/styleContact.css
+++ b/css/styleContact.css
@@ -199,6 +199,7 @@ footer a:hover {
     padding: 10px;
     cursor: pointer;
     font-size: 24px;
+    color: white;
   }
 
   nav {
@@ -326,6 +327,7 @@ footer a:hover {
     padding: 10px;
     cursor: pointer;
     font-size: 24px;
+    color: white;
   }
 
   nav {
@@ -453,6 +455,7 @@ footer a:hover {
     padding: 10px;
     cursor: pointer;
     font-size: 24px;
+    color: white;
   }
 
   nav {
@@ -580,6 +583,7 @@ footer a:hover {
       padding: 10px;
       cursor: pointer;
       font-size: 24px;
+      color: white;
     }
 
     nav {
@@ -709,6 +713,7 @@ footer a:hover {
       padding: 10px;
       cursor: pointer;
       font-size: 24px;
+      color: white;
     }
 
     nav {
