--- a/css/about.css
+++ b/css/about.css
@@ -680,7 +680,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -954,7 +954,7 @@ footer {
             top: 100%;
             left: 0;
             width: 100%;
-            background: #07dc3c;
+            background: #7200eb;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 20px;
             flex-direction: column;
@@ -1049,7 +1049,7 @@ footer {
             top: 100%;
             left: 0;
             width: 100%;
-            background: #07dc3c;
+            background: #7200eb;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             padding: 20px;
             flex-direction: column;
@@ -1144,7 +1144,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
@@ -1241,7 +1241,7 @@ footer {
         top: 100%;
         left: 0;
         width: 100%;
-        background: #07dc3c;
+        background: #7200eb;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
         flex-direction: column;
