--- a/css/about.css
+++ b/css/about.css
@@ -76,13 +76,12 @@ body {
 }
 
 .title img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    width: 100px;
+    height: 57px;
+    border-radius: 0;
     margin-right: 0;
-    margin-left: 2px;
+    margin-left: 17px;
 }
-
 
 .sectionAbout{
     padding: 265px 0;
