--- a/css/style.css
+++ b/css/style.css
@@ -76,15 +76,16 @@ body {
 }
 
 .title img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    width: 100px;
+    height: 57px;
+    border-radius: 0;
     margin-right: 0;
-    margin-left: 2px;
+    margin-left: 17px;
 }
 
 .section {
-    padding: 10px 0;
+    padding: 7px 0;
+    margin-top: 84px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -302,7 +303,7 @@ footer {
   }
   
 
-  @media (max-width: 1023px) {
+  @media (max-width: 1024px) {
 
     .menu-icon {
         display: block;
