--- a/css/styleContact.css
+++ b/css/styleContact.css
@@ -75,11 +75,11 @@ body {
 }
 
 .title img {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
+  width: 100px;
+  height: 57px;
+  border-radius: 0;
   margin-right: 0;
-  margin-left: 2px;
+  margin-left: 17px;
 }
 
 /*contacto*/
