--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,22 @@ body {
     margin-left: 17px;
 }
 
+.barNav{
+    display: flex;
+}
+
+.registroContainer{
+    display: flex;
+}
+
+#registerLoginContainer {
+    position: relative;
+  }
+
+.hidden {
+    display: none;
+  }
+
 .section {
     padding: 7px 0;
     margin-top: 84px;
