--- a/css/registro.css
+++ b/css/registro.css
@@ -183,3 +183,228 @@ footer {
   footer a:hover {
     text-decoration: underline;
   }
+
+
+  /*Media querys*/
+
+
+  @media (max-width: 1030px) {
+
+    body{
+      background-repeat: no-repeat;
+    }
+
+    form {
+        margin: 2rem 0;
+        width: 100%;
+        display: grid;
+        margin-top: -3%;
+    }
+
+    .containerForm {
+      margin-left: 14%;
+      margin-top: 21%;
+      display: grid;
+      width: 57%;
+      background-color: rgba(68, 58, 58, 0.712);
+      padding: 5%;
+      border-radius: 30px;
+      padding-right: 10%;
+      margin-bottom: 5%;
+  }
+
+  footer {
+    background-color: #7200eb;
+    color: white;
+    padding: 20px;
+    font-weight: bold;
+    margin-top: 24%;
+}
+  }
+
+  @media (max-width: 920px) {
+
+    .containerForm {
+      margin-left: 14%;
+      margin-top: 21%;
+      display: grid;
+      width: 57%;
+      background-color: rgba(68, 58, 58, 0.712);
+      padding: 5%;
+      border-radius: 30px;
+      padding-right: 10%;
+      margin-bottom: 0%;
+  }
+
+    footer {
+        background-color: #7200eb;
+        color: white;
+        padding: 20px;
+        font-weight: bold;
+        margin-top: 33%;
+    }
+}
+
+  @media (max-width: 850px) {
+
+    body{
+      background-repeat: no-repeat;
+    }
+
+    form {
+        margin: 2rem 0;
+        width: 100%;
+        display: grid;
+        margin-top: -3%;
+    }
+
+    .containerForm {
+      margin-left: 14%;
+      margin-top: 21%;
+      display: grid;
+      width: 57%;
+      background-color: rgba(68, 58, 58, 0.712);
+      padding: 5%;
+      border-radius: 30px;
+      padding-right: 10%;
+      margin-bottom: 5%;
+  }
+
+  footer {
+    background-color: #7200eb;
+    color: white;
+    padding: 20px;
+    font-weight: bold;
+    margin-top: 19%;
+}
+  }
+
+  @media (max-width: 770px) {
+
+    body{
+      background-repeat: no-repeat;
+    }
+
+    form {
+        margin: 2rem 0;
+        width: 100%;
+        display: grid;
+        margin-top: -12%;
+    }
+
+    .containerForm {
+      margin-left: 14%;
+      margin-top: 21%;
+      display: grid;
+      width: 57%;
+      background-color: rgba(68, 58, 58, 0.712);
+      padding: 5%;
+      border-radius: 30px;
+      padding-right: 10%;
+      margin-bottom: 5%;
+  }
+  }
+
+  @media (max-width: 569px) {
+
+    body{
+      background-repeat: no-repeat;
+    }
+
+    .menu-icon {
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 13px;
+        cursor: pointer;
+        font-size: 24px;
+        color: white;
+    }
+
+    nav {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background: #7200eb;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        flex-direction: column;
+    }
+
+    nav a {
+        margin-bottom: 10px;
+    }
+
+    .containerForm {
+      margin-left: 14%;
+      margin-top: 31%;
+      display: grid;
+      width: 57%;
+      background-color: rgba(68, 58, 58, 0.712);
+      padding: 5%;
+      border-radius: 30px;
+      padding-right: 10%;
+      margin-bottom: 5%;
+  }
+
+  form {
+    margin: 2rem 0;
+    width: 100%;
+    display: grid;
+    margin-top: -9%;
+}
+  }
+
+
+  @media (max-width: 320px) {
+  
+    .menu-icon {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding: 13px;
+      cursor: pointer;
+      font-size: 24px;
+      color: white;
+  }
+
+  nav {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      background: #7200eb;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      padding: 20px;
+      flex-direction: column;
+  }
+
+  nav a {
+      margin-bottom: 10px;
+  }
+
+  form {
+    margin: 2rem 0;
+    width: 100%;
+    display: grid;
+    margin-top: -12%;
+}
+
+.containerForm {
+  margin-left: 8%;
+  margin-top: 35%;
+  display: grid;
+  width: 71%;
+  background-color: rgba(68, 58, 58, 0.712);
+  padding: 5%;
+  border-radius: 30px;
+  margin-bottom: 15%;
+  padding-right: 12%;
+}
+
+  }
