--- a/css/styleContact.css
+++ b/css/styleContact.css
@@ -96,7 +96,7 @@ body {
 .contactate {
   padding-top: 235px;
   text-align: center;
-  color: #112e04;
+  color: #4db33f;
   text-transform: uppercase;
   font-size: 60px;
   line-height: 200px;
@@ -142,7 +142,7 @@ body {
 .form-contact .form-container .form-control {
   background: transparent;
   border: none;
-  color: #77be05;
+  color: #000000;
   margin-bottom: 15px;
   border-bottom: solid 1px #77be05;
   border-radius: 0;
